apps/notifuse/notifuse.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifuse
spec:
  selector:
    matchLabels:
      app: notifuse
  template:
    metadata:
      labels:
        app: notifuse
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: notifuse
          image: notifuse/notifuse:v41.0
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: web
              containerPort: 8080
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
            terminationGracePeriodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: notifuse
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: notifuse
